# Snake

./: CMakeLists.txt  README.md  requirements.txt
include/: game.hpp
src/: game.cpp  main.cpp
src/audio/: AudioManager.cpp
src/core/: Game.cpp  Game.hpp  GameState.cpp  collisionHandler.cpp  eventsHandler.cpp  updateGame.cpp
src/input/: inputHandler.cpp
src/rendering/: Renderer.cpp  UI.cpp  addApple.cpp  addSnake.cpp  drawDigit.cpp  drawLetter.cpp  drawLine.cpp  drawSnakeEdges.cpp  drawSquare.cpp
src/utils/: snakeUtils.cpp
